# turingmachine-rs

./: Cargo.toml  README.md
examples/: divisibility.rs
src/: lib.rs
tests/: exactly-two.rs  replace-ones.rs
